--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
                             <div class="row align-items-start">
                                 <div class="col-9">
                                     <div class="mb-3">
-                                        <label for="exampleFormControlInput1" class="form-label">Razao Social</label>
+                                        <label for="exampleFormControlInput1" class="form-label">Razao Social *</label>
                                         <input type="text" class="form-control" id="razaoSocial" required
                                             placeholder="Razao Social">
                                     </div>
                                 </div>
                                 <div class="col-3">
                                     <div class="mb-3">
-                                        <label for="exampleFormControlTextarea1" class="form-label">CNPJ</label>
-                                        <input type="text" class="form-control" id="cnpj" placeholder="cnpj">
+                                        <label for="exampleFormControlTextarea1" class="form-label">CNPJ *</label>
+                                        <input type="text" class="form-control" id="cnpj" required placeholder="cnpj">
                                     </div>
                                 </div>
                             </div>
                             <div class="row align-items-start">
                                 <div class="col-9">
                                     <div class="mb-3">
-                                        <label for="exampleFormControlInput1" class="form-label">Nome Fantasia</label>
-                                        <input type="text" class="form-control" id="nomeFantasia"
+                                        <label for="exampleFormControlInput1" class="form-label">Nome Fantasia *</label>
+                                        <input type="text" class="form-control" id="nomeFantasia" required
                                             placeholder="Nome Fantasia">
                                     </div>
                                 </div>
@@ -58,17 +58,17 @@
                             <div class="row align-items-start">
                                 <div class="col-5">
                                     <div class="mb-3">
-                                        <label for="exampleFormControlInput1" class="form-label">CEP</label>
-                                        <input type="email" class="form-control" id="razaoSocial"
-                                            placeholder="Razao Social">
+                                        <label for="exampleFormControlInput1" class="form-label">CEP *</label>
+                                        <input type="email" class="form-control" id="cep" required
+                                            placeholder="CEP">
                                     </div>
                                 </div>
                                 <div class="col-3 offset-4">
                                     <div class="mb-3">
                                         <label for="exampleFormControlTextarea1" class="form-label">Inscricao
-                                            Estadual</label>
-                                        <input type="text" class="form-control" id="inscricaoEstadual"
-                                            placeholder="Inscricao Estadual">
+                                            Municipal</label>
+                                        <input type="text" class="form-control" id="inscricaoMunicipal"
+                                            placeholder="Inscricao Municipal">
                                     </div>
                                 </div>
                             </div>
@@ -119,21 +119,21 @@
                                 <div class="col-6">
                                     <div class="mb-3">
                                         <label for="exampleFormControlInput1" class="form-label">Nome da Pessoa de
-                                            Contato</label>
-                                        <input type="text" class="form-control" id="NomedaPessoadeContato"
+                                            Contato *</label>
+                                        <input type="text" class="form-control" id="nomedaPessoadeContato" required
                                             placeholder="Nome da Pessoa de Contato">
                                     </div>
                                 </div>
                                 <div class="col-4">
                                     <div class="mb-3">
-                                        <label for="exampleFormControlTextarea1" class="form-label">Telefone</label>
-                                        <input type="text" class="form-control" id="telefone" placeholder="telefone">
+                                        <label for="exampleFormControlTextarea1" class="form-label">Telefone *</label>
+                                        <input type="text" class="form-control" id="telefone" required placeholder="telefone">
                                     </div>
                                 </div>
                                 <div class="col-2">
                                     <div class="mb-3">
-                                        <label for="exampleFormControlTextarea1" class="form-label">Email</label>
-                                        <input type="email" class="form-control" id="email" placeholder="email">
+                                        <label for="exampleFormControlTextarea1" class="form-label">Email *</label>
+                                        <input type="email" class="form-control" id="email" required placeholder="email">
                                     </div>
                                 </div>
                             </div>
@@ -181,12 +181,12 @@
                                                 <div class="mb-3">
                                                     <label for="exampleFormControlTextarea1" class="form-label">UND.
                                                         Medida</label>
-                                                    <select class="form-select" aria-label="Default select example">
+                                                    <select class="form-select" id="undMedida" aria-label="Default select example">
                                                         <option selected>UND. Medida</option>
-                                                        <option value="1">litro (l)</option>
-                                                        <option value="2">metro (m)</option>
-                                                        <option value="3">grama (g)</option>
-                                                        <option value="4">quilograma (kg)</option>
+                                                        <option value="litro (l)">litro (l)</option>
+                                                        <option value="metro (m)">metro (m)</option>
+                                                        <option value="grama (g)">grama (g)</option>
+                                                        <option value="quilograma (kg)">quilograma (kg)</option>
                                                     </select>
                                                 </div>
                                             </div>
